<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".ScanningQrCodeFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_scanning_title_1"
        android:textStyle="bold"
        android:textSize="25sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_scanning_title_2"
        android:textStyle="bold"
        android:textColor="@color/blue_500"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_text"
        android:inputType="textMultiLine"
        />
    <Button
        android:id="@+id/navigate_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        android:text="@string/navigate_site"
        />
    <Button
        android:id="@+id/copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/blue_500"
        android:textStyle="bold"
        android:text="@string/copy"
        />
</LinearLayout>