<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        tools:context=".ui.dashboard.DashboardFragment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr_code_scanning_title_1"
            android:textStyle="bold"
            android:textSize="25sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanner"
            android:textStyle="bold"
            android:textColor="@color/blue_500"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_text"
            android:background="@drawable/background_text"
            android:inputType="textMultiLine"
            />
        <Button
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:layout_gravity="end"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:padding="20dp"
            android:backgroundTint="@color/gray_200"
            >
            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
</ScrollView>
